# programming-notes

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  avx2_notes.cc  build.sh  compile_commands.json  general_notes.cc  ieee754_notes.cc  tbb_notes.cc
backtrace/: CMakeLists.txt  trace.cc
clang/: .gitignore  Makefile  cfg.cc  control-flow-graphs.md
docker/: sage.md
haskell/: .gitignore  collatz.hs  primes.hs
rust/: box-self-trait.rs  cell.rs  closure.rs  crates.md
